<?xml version="2"?>
<package>
  <name>vl53l0x_driver</name>
  <version>0.0.1</version>
  <description> ROS node for reading data from the multiple VL53L0X ToF sensor using MCP23017 I2C GPIO </description>

  <maintainer email="bhuvanchandra.dv@gmail.com">Bhuvanchandra DV</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>vl53l0x</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>vl53l0x</run_depend>

</package>
